data/derived/sp14/progs/unify/prog1040.ml.out
Characters 63-75:
  | hd::tl -> hd + (sumList tl);;
                   ^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
